@@ -4,10 +4,13 @@ package org.hiero.hapi.fees;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import java.util.List;
+
 import org.hiero.hapi.support.fees.PiecewiseLinearCurve;
 import org.hiero.hapi.support.fees.PiecewiseLinearPoint;
 import org.hiero.hapi.support.fees.PricingCurve;
 import org.hiero.hapi.support.fees.VariableRateDefinition;
+
+import static java.util.Objects.requireNonNull;
 
 /**
  * Calculates the fee multiplier for high-volume transactions based on throttle utilization
@@ -35,7 +38,7 @@ public final class HighVolumePricingCalculator {
     public static final long MULTIPLIER_SCALE = 1_000L;
 
     private HighVolumePricingCalculator() {
-        // Utility class - prevent instantiation
+        // Utility class
     }
 
     /**
@@ -53,35 +56,24 @@ public final class HighVolumePricingCalculator {
             return MULTIPLIER_SCALE;
         }
 
-        final int maxMultiplier = variableRateDefinition.maxMultiplier();
+        final int maxMultiplier = Math.max(variableRateDefinition.maxMultiplier(), (int) MULTIPLIER_SCALE);
         final PricingCurve pricingCurve = variableRateDefinition.pricingCurve();
 
         // Clamp utilization to valid range
         final int clampedUtilization = Math.max(0, Math.min(utilizationBasisPoints, UTILIZATION_SCALE));
 
         long rawMultiplier;
-        if (pricingCurve == null || !pricingCurve.hasPiecewiseLinear()) {
+        if (pricingCurve == null || !pricingCurve.hasPiecewiseLinear() || pricingCurve.piecewiseLinearOrElse(PiecewiseLinearCurve.DEFAULT).points().isEmpty()) {
             // No pricing curve specified - use linear interpolation between 1x (1000) and max_multiplier
             rawMultiplier =
                     linearInterpolate(0, (int) MULTIPLIER_SCALE, UTILIZATION_SCALE, maxMultiplier, clampedUtilization);
         } else {
             // Use piecewise linear curve
-            rawMultiplier = interpolatePiecewiseLinear(pricingCurve.piecewiseLinear(), clampedUtilization);
+            rawMultiplier = interpolatePiecewiseLinear(requireNonNull(pricingCurve.piecewiseLinear()), clampedUtilization);
         }
 
-        // Cap at max multiplier
-        return Math.min(rawMultiplier, maxMultiplier);
-    }
-
-    /**
-     * Calculates the effective multiplier as a double value (for display/logging purposes).
-     * The effective multiplier is the raw multiplier divided by MULTIPLIER_SCALE.
-     *
-     * @param rawMultiplier the raw multiplier value (scaled by MULTIPLIER_SCALE)
-     * @return the effective multiplier as a double (e.g., 2.0 for 2x)
-     */
-    public static double toEffectiveMultiplier(final long rawMultiplier) {
-        return (double) rawMultiplier / MULTIPLIER_SCALE;
+        // Cap at max multiplier, enforce minimum multiplier
+        return Math.max(MULTIPLIER_SCALE, Math.min(rawMultiplier, maxMultiplier));
     }
 
     /**
@@ -94,23 +86,16 @@ public final class HighVolumePricingCalculator {
     private static long interpolatePiecewiseLinear(
             @NonNull final PiecewiseLinearCurve curve, final int utilizationBasisPoints) {
         final List<PiecewiseLinearPoint> points = curve.points();
-
-        // Handle empty curve - return base multiplier (1x = 1000)
-        if (points.isEmpty()) {
-            return MULTIPLIER_SCALE;
-        }
-
-        // Handle single point - return that point's multiplier
+        // If there is only one point, return that point's multiplier
         if (points.size() == 1) {
-            return points.get(0).multiplier();
+            return normalizeMultiplier(points.getFirst().multiplier());
         }
 
         // Find the two points to interpolate between
         PiecewiseLinearPoint lowerPoint = null;
         PiecewiseLinearPoint upperPoint = null;
 
-        for (int i = 0; i < points.size(); i++) {
-            final PiecewiseLinearPoint point = points.get(i);
+        for (final PiecewiseLinearPoint point : points) {
             if (point.utilizationBasisPoints() <= utilizationBasisPoints) {
                 lowerPoint = point;
             }
@@ -121,39 +106,61 @@ public final class HighVolumePricingCalculator {
 
         // If utilization is below the first point, use the first point's multiplier
         if (lowerPoint == null) {
-            return points.get(0).multiplier();
+            return normalizeMultiplier(points.getFirst().multiplier());
         }
 
         // If utilization is above the last point, use the last point's multiplier
         if (upperPoint == null) {
-            return points.get(points.size() - 1).multiplier();
+            return normalizeMultiplier(points.getLast().multiplier());
         }
 
         // If we're exactly on a point, return that point's multiplier
         if (lowerPoint.utilizationBasisPoints() == upperPoint.utilizationBasisPoints()) {
-            return upperPoint.multiplier();
+            return normalizeMultiplier(upperPoint.multiplier());
         }
 
         // Interpolate between the two points
         return linearInterpolate(
                 lowerPoint.utilizationBasisPoints(),
-                lowerPoint.multiplier(),
+                normalizeMultiplier(lowerPoint.multiplier()),
                 upperPoint.utilizationBasisPoints(),
-                upperPoint.multiplier(),
+                normalizeMultiplier(upperPoint.multiplier()),
                 utilizationBasisPoints);
     }
 
     /**
      * Performs linear interpolation between two points.
      */
-    private static long linearInterpolate(final int x1, final long y1, final int x2, final long y2, final int x) {
-        if (x2 == x1) {
-            return y1;
+    private static long linearInterpolate(final int lowerUtilization,
+                                          final long lowerMultiplier,
+                                          final int upperUtilization,
+                                          final long upperMultiplier,
+                                          final int utilization) {
+        if (upperUtilization == lowerUtilization) {
+            return lowerMultiplier;
         }
         // Use long arithmetic to avoid overflow
-        final long dx = x2 - x1;
-        final long dy = y2 - y1;
-        final long offset = x - x1;
-        return y1 + (dy * offset) / dx;
+        final long utilizationDiff = upperUtilization - lowerUtilization;
+        final long multiplierDiff = upperMultiplier - lowerMultiplier;
+        final long offset = utilization - lowerUtilization;
+        return lowerMultiplier + (multiplierDiff * offset) / utilizationDiff;
+    }
+
+    /**
+     * Enforces the minimum multiplier of 1.0x (1,000 scaled).
+     */
+    private static long normalizeMultiplier(final long multiplier) {
+        return Math.max(multiplier, MULTIPLIER_SCALE);
+    }
+
+    /**
+     * Calculates the effective multiplier as a double value (for display/logging purposes).
+     * The effective multiplier is the raw multiplier divided by MULTIPLIER_SCALE.
+     *
+     * @param rawMultiplier the raw multiplier value (scaled by MULTIPLIER_SCALE)
+     * @return the effective multiplier as a double (e.g., 2.0 for 2x)
+     */
+    public static double toEffectiveMultiplier(final long rawMultiplier) {
+        return (double) rawMultiplier / MULTIPLIER_SCALE;
     }
 }
